--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="w-full flex justify-between items-center py-3 px-4 fixed z-50">
 
     <div class="w-6/12">
-        <a href="#">
+        <a href="/">
             {% load static %}
             <img src="{% static 'images/hashflix.png'%}" class="w-2/12" alt="logo">
         </a>
