--- a/filme/templates/detalhesfilme.html
+++ b/filme/templates/detalhesfilme.html
@@ -5,7 +5,7 @@
 {% endblock %} 
 
 {% block content %}
-
+<div class="py-10">
     <h1>Esse é o detalhe do filme: {{ object.titulo }} </h1>
     <p>{{ object }}</p>
     <p>{{ object.descricao }}</p>
@@ -18,7 +18,16 @@
             <p>Epísódio {{ forloop.counter }}: {{ episodio.titulo }}</p>
         </a>
     {% endfor %}
+</div>
 
+<div class="py-10">
+    <h2>Filmes Relacionados</h2>
+    {% for filme in filmes_relacionados %}
+        <a href="{% url 'filme:detalhesfilme' filme.pk %}">
+            <p>{{ filme.titulo }}</p>
+        </a>
+    {% endfor %}    
+</div>
      
     
 
