--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,25 @@
     {% block content %}
     {% endblock %} 
 
+    <script>
+        const nav = document.querySelector('nav')
+
+        document.addEventListener("scroll", e=>{
+
+            if(scrollY > 100) {
+                if(scrollY > window.innerHeight){
+                    nav.classList.add('invisible')
+                } else {
+                    nav.classList.add('bg-gray-900')
+                    nav.classList.remove('invisible')
+                }
+            } else {
+                nav.classList.remove('bg-gray-900')
+                nav.classList.remove('invisible')
+            }
+        })
+    </script>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
