--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,8 +9,9 @@
 
     <div class="w-6/12 flex flex-nowrap justify-end">
         <div class="mr-2">
-            <form action="#">
-                <input type="text" class="py-1 px-2 rounded-md text-black" name="search" id="search" placeholder="Pesquisar...">
+            <form action="{% url 'filme:pesquisafilme' %}" method="GET">
+                <input type="text" class="py-1 px-2 rounded-md text-black" name="query" id="query" placeholder="Pesquisar..." value="{{ request.GET.query }}">
+                <input type="submit" name="" id="" value="">
             </form>
         </div>
         <div class="mr-2">
