--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,28 +1,41 @@
+{% load static %}
+
 <nav class="w-full flex justify-between items-center py-3 px-4 fixed z-50">
 
     <div class="w-6/12">
-        <a href="/">
-            {% load static %}
+        <a href="/">            
             <img src="{% static 'images/hashflix.png'%}" class="w-2/12" alt="logo">
         </a>
     </div>
 
     <div class="w-6/12 flex flex-nowrap justify-end">
-        <div class="mr-2">
-            <form action="{% url 'filme:pesquisafilme' %}" method="GET">
-                <input type="text" class="py-1 px-2 rounded-md text-black" name="query" id="query" placeholder="Pesquisar..." value="{{ request.GET.query }}">
-                <input type="submit" name="" id="" value="">
-            </form>
-        </div>
-        <div class="mr-2">
-            <a href="#">
-                <button class="bg-red-600 text-white py-1 px-3 rounded-md">Login</button>
-            </a>
-        </div>
-        <div class="mr-2">
-            <a href="#">
-                <button class="bg-red-600 text-white py-1 px-3 rounded-md">Editar Perfil</button>
-            </a>
-        </div>
+        {% if user.is_authenticated %}       
+            <div class="mr-2">
+                <form action="{% url 'filme:pesquisafilme' %}" method="GET">
+                    <input type="text" class="py-1 px-2 rounded-md text-black" name="query" id="query" placeholder="Pesquisar..." value="{{ request.GET.query }}">
+                    <input type="submit" name="" id="" value="">
+                </form>
+            </div>
+        
+            <div class="mr-2">
+                <a href="{% url 'filme:editarperfil' %}">
+                    <button class="bg-red-600 text-white py-1 px-3 rounded-md">Editar Perfil</button>
+                </a>
+            </div>
+        {% endif %}
+
+        {% if user.is_authenticated %}   
+            <div class="mr-2">
+                <a href="{% url 'filme:logout' %}">
+                    <button class="bg-red-600 text-white py-1 px-3 rounded-md">Sair</button>
+                </a>
+            </div>
+        {% else %}
+            <div class="mr-2">
+                <a href="{% url 'filme:login' %}">
+                    <button class="bg-red-600 text-white py-1 px-3 rounded-md">Login</button>
+                </a>
+            </div>
+        {% endif %}
     </div>
 </nav>
